@@ -17,6 +17,7 @@
 package edu.internet2.middleware.shibboleth.idp.authn;
 
 import java.io.IOException;
+import java.security.GeneralSecurityException;
 import java.security.NoSuchAlgorithmException;
 import java.security.Principal;
 import java.util.ArrayList;
@@ -27,6 +28,8 @@ import java.util.Map;
 import java.util.Set;
 import java.util.Map.Entry;
 
+import javax.crypto.Mac;
+import javax.crypto.SecretKey;
 import javax.security.auth.Subject;
 import javax.servlet.RequestDispatcher;
 import javax.servlet.ServletConfig;
@@ -42,6 +45,7 @@ import org.opensaml.common.impl.SecureRandomIdentifierGenerator;
 import org.opensaml.saml2.core.AuthnContext;
 import org.opensaml.util.storage.ExpiringObject;
 import org.opensaml.util.storage.StorageService;
+import org.opensaml.xml.util.Base64;
 import org.opensaml.xml.util.DatatypeHelper;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
@@ -222,6 +226,12 @@ public class AuthenticationEngine extends HttpServlet {
             HttpServletResponse httpResponse) {
         LOG.debug("Returning control to profile handler at: {}", loginContext.getProfileHandlerURL());
         httpRequest.setAttribute(LoginContext.LOGIN_CONTEXT_KEY, loginContext);
+        
+        // Cleanup this cookie
+        Cookie lcKeyCookie = new Cookie(LOGIN_CONTEXT_KEY_NAME, "");
+        lcKeyCookie.setMaxAge(0);
+        httpResponse.addCookie(lcKeyCookie);
+        
         forwardRequest(loginContext.getProfileHandlerURL(), httpRequest, httpResponse);
     }
 
@@ -703,8 +713,23 @@ public class AuthenticationEngine extends HttpServlet {
             Session userSession) {
         httpRequest.setAttribute(Session.HTTP_SESSION_BINDING_ATTRIBUTE, userSession);
 
+        String remoteAddress = httpRequest.getRemoteAddr();
+        String sessionId = userSession.getSessionID();
+        
+        String signature = null;
+        SecretKey signingKey = userSession.getSessionSecretKey();
+        try {
+            Mac mac = Mac.getInstance("HmacSHA256");
+            mac.init(signingKey);
+            mac.update(remoteAddress.getBytes());
+            mac.update(sessionId.getBytes());
+            signature = Base64.encodeBytes(mac.doFinal());
+        } catch (GeneralSecurityException e) {
+            LOG.error("Unable to compute signature over session cookie material", e);
+        }
+
         LOG.debug("Adding IdP session cookie to HTTP response");
-        Cookie sessionCookie = new Cookie(IDP_SESSION_COOKIE_NAME, userSession.getSessionID());
+        Cookie sessionCookie = new Cookie(IDP_SESSION_COOKIE_NAME, remoteAddress + "|" + sessionId + "|" + signature);
 
         String contextPath = httpRequest.getContextPath();
         if (DatatypeHelper.isEmpty(contextPath)) {
